additional bold elements

--- a/app/views/dashboards/home.html
+++ b/app/views/dashboards/home.html
@@ -43,8 +43,8 @@
           </a>
         </div>
         <br>
-        <p class="govuk-body">Your next statement is due in 5 days.</p>
-        <p class="govuk-body">How much you'll get will depend on your circumstances from 12 November 2018 to 12 January 2018.</p>
+        <p class="govuk-body">Your next statement is due in <span class="bold">5 days.</span></p>
+        <p class="govuk-body">How much you'll get will depend on your circumstances from <span class="bold">12 November 2018 to 12 January 2018.</span></p>
         <br>
 
         <div class="govuk-grid-row">
